--- a/public/style.css
+++ b/public/style.css
@@ -87,7 +87,8 @@ body {
 
 .con1-div2-2 {
     width: 540px;
-    height: 475px;
+    min-height: 475px;
+    max-height: 562px;
 
     padding: 40px;
 
@@ -102,8 +103,14 @@ body {
     justify-content: center;
 }
 
-.con1-div2-2 input {
+.con1-div2-2-1 {
     width: 100%;
+    margin-bottom: 15px;
+}
+
+.con2-Input {
+    width: 100%;
+    min-height: 52px;
     height: 55px;
 
     font-family: 'Poppins', sans-serif;
@@ -114,12 +121,54 @@ body {
     border: 1px solid hsl(246, 25%, 77%);
     border-radius: 5px;
 
-    margin-bottom: 20px;
+    outline: none;
+    margin-bottom: 5px;
+}
+
+input[type=text]:focus {
+    border: 1px solid hsl(248, 32%, 49%);
+}
+
+.warningDiv {
+    display: none;
+    height: 1rem;
+    float: right;
+
+    color: hsl(0, 100%, 74%);
+    font-size: 11px;
+    font-weight: 500;
+    font-style: italic;
+}
+
+.w-1 {
+    display: none;
+}
+
+.w-2 {
+    display: none;
+}
+
+.w-3 {
+    display: none;
+}
+
+.w-4 {
+    display: none;
+}
+
+.warningBorder {
+    border: 2px solid hsl(0, 100%, 74%);
+}
+
+.wrongInput {
+    background: url(./images/icon-error.svg) no-repeat 7px 7px;
+    background-position: center right;
+    background-position-x: 420px;
 }
 
 .con1-div2-2 button {
     width: 100%;
-    height: 52px;
+    min-height: 52px;
     font-family: 'Poppins', sans-serif;
     text-transform: uppercase;
     font-weight: 500;
@@ -134,6 +183,11 @@ body {
     border-radius: 5px;
 
     margin-bottom: 15px;
+}
+
+button:hover {
+    background-color: hsla(154, 59%, 51%, 70%);
+    box-shadow: 0 3px hsla(154, 87%, 29%, 70%);
 }
 
 .terms {
