--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,37 @@
+@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@500;600;700&display=swap");
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    width: 1440px;
-    height: 800px;
-    background-color: #fff;
+  width: 1440px;
+  height: 800px;
+  font: 100% "League Spartan", sans-serif;
+  color: hsl(0, 0%, 63%);
+  background-color: hsl(0, 0%, 100%);
 }
 
+.attribution {
+  font-size: 11px;
+  text-align: center;
+}
+
+.attribution a {
+  color: hsl(228, 45%, 44%);
+}
+
+.main__div-nav {
+  width: 840px;
+  height: 534px;
+  flex-shrink: 0;
+  background: url("./images/desktop-image-hero-1.jpg"), lightgray 50%/cover no-repeat;
+}
+
+.main__div-content {
+  width: 601px;
+  height: 534px;
+  flex-shrink: 0;
+  background: rgba(255, 255, 255, 0.33);
+}/*# sourceMappingURL=styles.css.map */
