--- a/frontend-react/src/container/Home/Home.scss
+++ b/frontend-react/src/container/Home/Home.scss
@@ -1,22 +1,173 @@
 .attribution { 
     font-size: 11px; 
     text-align: center; 
+    display: none;
 }
 
 .attribution a { 
     color: hsl(228, 45%, 44%); 
 }
 
+.main__div {
+    width: 1440px;
+    height: 800px;
+
+    display: grid;
+    grid-template-columns: 420px 420px 160px 440px;
+    grid-template-rows: 534px 265px;
+}
+
 .main__div-nav {
-    width: 840px;
+    // width: 840px;
+    grid-area: 1 / 1 / 1 / 3;
+
     height: 534px;
-    flex-shrink: 0;
-    background: url(''), lightgray 50% / cover no-repeat;
+    background: url(../../assets/images/desktop-image-hero-1.jpg);
+    background-repeat: no-repeat;
+
+    .nav {
+        width: 100%;
+
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        text-transform: lowercase;
+        gap: 2.2rem;
+
+        color: white;
+
+        padding-top: 50px;
+        padding-left: 60px;
+
+        .nav-head {
+            font-size: 2.2rem;
+        }
+
+        .nav-itemCon {
+            font-size: 1.2rem;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            gap: 1.6rem;
+
+            .nav-items {
+                display: inline-block;
+                position: relative;
+                cursor: pointer;
+            }
+            
+            .nav-items::after {
+                content: '';
+                position: absolute;
+                bottom: -8px;
+                left: 50%;
+                transform: translateX(-50%);
+                width: 50%;
+                height: 2.5px;
+                border-radius: 10px;
+
+                background-color: #ffffff;
+                opacity: 0;
+                transition: opacity 0.3s ease; /* Add a transition for smooth effect */
+            }
+            
+            .nav-items:hover::after {
+                opacity: 1;
+            }
+        }
+    }
 }
 
 .main__div-content {
-    width: 601px;
+    // width: 601px;
+    grid-area: 1 / 3 / 1 / 5;
+    
     height: 534px;
-    flex-shrink: 0;
-    background: rgba(255, 255, 255, 0.33);
+    background: rgb(255, 255, 255);
+    padding: 5.5rem;
+
+    .main__div-content-heading {
+        font-size: 3rem;
+        font-weight: 700;
+        color: black;
+    }
+
+    .main__div-content-para {
+        font-size: 1rem;
+        margin-top: 1.5rem;
+        font-weight: 400;
+        line-height: 1.2rem;
+    }
+
+    .shopNow__button {
+        font-size: .9rem;
+        margin-top: 1.5rem;
+        text-transform: uppercase;
+        letter-spacing: .5rem;
+        color: hsl(0, 0%, 63%);
+
+        background: transparent;
+        border: none;
+    }
+
+    .arrowDiv {
+        width: 160px;
+        height: 80px;
+        display: flex;
+        flex-direction: row;
+
+        background-color: black;
+
+        .firstArrow {
+            width: 80px;
+            height: 80px;
+        }
+
+        .firstArrow:hover {
+           background-color: hsl(0, 0%, 27%);
+        }
+
+        .secondArrow {
+            width: 80px;
+            height: 80px;
+        }
+
+        .secondArrow:hover {
+            background-color: hsl(0, 0%, 27%);
+        }
+    }
+}
+
+.mini__div-image1 {
+    // pass
+    grid-area: 2 / 1 / 2 / 2;
+}
+
+.mini__div-content {
+    // pass
+    grid-area: 2 / 2 / 2 / 4;
+    padding: 3rem;
+
+    .mini__div-content-heading {
+        font-size: 1.2rem;
+        font-weight: 800;
+        text-transform: uppercase;
+        letter-spacing: .3rem;
+        margin-bottom: 1.7rem;
+
+        color: black;
+    }
+
+    .mini__div-content-para {
+        font-size: 16px;
+        color: hsl(0, 0%, 63%);
+        line-height: 1.2rem;
+
+    }
+}
+
+.mini__div-image2 {
+    // pass
+    grid-area: 2 / 4 / 2 / 5;
 }
