--- a/frontend-react/src/container/Home/Home.scss
+++ b/frontend-react/src/container/Home/Home.scss
@@ -22,8 +22,8 @@
     grid-area: 1 / 1 / 1 / 3;
 
     height: 534px;
-    background: url(../../assets/images/desktop-image-hero-1.jpg);
-    background-repeat: no-repeat;
+    // background: url(../../assets/images/desktop-image-hero-1.jpg);
+    // background-repeat: no-repeat;
 
     .nav {
         width: 100%;
@@ -85,30 +85,36 @@
     
     height: 534px;
     background: rgb(255, 255, 255);
-    padding: 5.5rem;
+    
 
-    .main__div-content-heading {
-        font-size: 3rem;
-        font-weight: 700;
-        color: black;
-    }
+    .main__div-contentCons {
+        width: 100%;
+        height: 454px;
+        padding: 5.5rem;
 
-    .main__div-content-para {
-        font-size: 1rem;
-        margin-top: 1.5rem;
-        font-weight: 400;
-        line-height: 1.2rem;
-    }
-
-    .shopNow__button {
-        font-size: .9rem;
-        margin-top: 1.5rem;
-        text-transform: uppercase;
-        letter-spacing: .5rem;
-        color: hsl(0, 0%, 63%);
-
-        background: transparent;
-        border: none;
+        .main__div-content-heading {
+            font-size: 3rem;
+            font-weight: 700;
+            color: black;
+        }
+    
+        .main__div-content-para {
+            font-size: 1rem;
+            margin-top: 1.5rem;
+            font-weight: 400;
+            line-height: 1.2rem;
+        }
+    
+        .shopNow__button {
+            font-size: .9rem;
+            margin-top: 1.5rem;
+            text-transform: uppercase;
+            letter-spacing: .5rem;
+            color: hsl(0, 0%, 0%);
+    
+            background: transparent;
+            border: none;
+        }
     }
 
     .arrowDiv {
@@ -122,6 +128,16 @@
         .firstArrow {
             width: 80px;
             height: 80px;
+            border: none;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            background-color: black;
+
+            img {
+                height: 25px;
+            }
         }
 
         .firstArrow:hover {
@@ -131,6 +147,16 @@
         .secondArrow {
             width: 80px;
             height: 80px;
+            border: none;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            background-color: black;
+
+            img {
+                height: 25px;
+            }
         }
 
         .secondArrow:hover {
