--- a/frontend-react/src/container/Home/Home.scss
+++ b/frontend-react/src/container/Home/Home.scss
@@ -115,7 +115,28 @@
             background: transparent;
             border: none;
         }
+
+        .animate {
+            animation: fadeItems 0.5s;
+        }
+
+        @keyframes fadeItems {
+            0% {
+                opacity: 0;
+                transform: translate(20px) scale(0.9);
+            }
+    
+            100% {
+                opacity: 1;
+                transform: translate(0px) scale(1);
+            }
+        }
     }
+
+    // .fadeIn {
+    //     opacity: 1;
+    //     transition: opacity 0.5s ease-in-out;
+    // }
 
     .arrowDiv {
         width: 160px;
