--- a/frontend-react/src/container/Home/Home.scss
+++ b/frontend-react/src/container/Home/Home.scss
@@ -9,8 +9,8 @@
 }
 
 .main__div {
-    width: 1440px;
-    height: 800px;
+    width: 100vw;
+    height: auto;
 
     display: grid;
     grid-template-columns: 420px 420px 160px 440px;
@@ -18,7 +18,6 @@
 }
 
 .main__div-nav {
-    // width: 840px;
     grid-area: 1 / 1 / 1 / 3;
 
     height: 534px;
