--- a/frontend-react/src/container/Home/Home.scss
+++ b/frontend-react/src/container/Home/Home.scss
@@ -19,10 +19,7 @@
 
 .main__div-nav {
     grid-area: 1 / 1 / 1 / 3;
-
     height: 534px;
-    // background: url(../../assets/images/desktop-image-hero-1.jpg);
-    // background-repeat: no-repeat;
 
     .nav {
         width: 100%;
@@ -68,7 +65,7 @@
 
                 background-color: #ffffff;
                 opacity: 0;
-                transition: opacity 0.3s ease; /* Add a transition for smooth effect */
+                transition: opacity 0.3s ease;
             }
             
             .nav-items:hover::after {
@@ -79,7 +76,6 @@
 }
 
 .main__div-content {
-    // width: 601px;
     grid-area: 1 / 3 / 1 / 5;
     
     height: 534px;
@@ -132,11 +128,6 @@
         }
     }
 
-    // .fadeIn {
-    //     opacity: 1;
-    //     transition: opacity 0.5s ease-in-out;
-    // }
-
     .arrowDiv {
         width: 160px;
         height: 80px;
@@ -186,12 +177,10 @@
 }
 
 .mini__div-image1 {
-    // pass
     grid-area: 2 / 1 / 2 / 2;
 }
 
 .mini__div-content {
-    // pass
     grid-area: 2 / 2 / 2 / 4;
     padding: 3rem;
 
@@ -214,6 +203,5 @@
 }
 
 .mini__div-image2 {
-    // pass
     grid-area: 2 / 4 / 2 / 5;
 }
