--- a/Room_HomePage/src/pages/Home/Home.scss
+++ b/Room_HomePage/src/pages/Home/Home.scss
@@ -1,207 +1,197 @@
-.attribution { 
-    font-size: 11px; 
-    text-align: center; 
-    display: none;
+.attribution {
+  font-size: 11px;
+  text-align: center;
+  display: none;
 }
 
-.attribution a { 
-    color: hsl(228, 45%, 44%); 
+.attribution a {
+  color: hsl(228, 45%, 44%);
 }
 
 .main__div {
-    width: 100vw;
-    height: auto;
+  width: 100%;
+  height: auto;
 
-    display: grid;
-    grid-template-columns: 420px 420px 160px 440px;
-    grid-template-rows: 534px 265px;
+  display: flex;
+  flex-direction: row;
+
+  .inner__mainDiv {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+  }
+
+  .inner__divSecond {
+    display: flex;
+    flex-direction: row;
+
+    .mini__div-image1 {
+      width: 30%;
+    }
+  }
 }
 
 .main__div-nav {
-    grid-area: 1 / 1 / 1 / 3;
-    height: 534px;
-
-    .nav {
-        width: 100%;
-
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-start;
-        text-transform: lowercase;
-        gap: 2.2rem;
-
-        color: white;
-
-        padding-top: 50px;
-        padding-left: 60px;
-
-        .nav-head {
-            font-size: 2.2rem;
-        }
-
-        .nav-itemCon {
-            font-size: 1.2rem;
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: center;
-            gap: 1.6rem;
-
-            .nav-items {
-                display: inline-block;
-                position: relative;
-                cursor: pointer;
-            }
-            
-            .nav-items::after {
-                content: '';
-                position: absolute;
-                bottom: -8px;
-                left: 50%;
-                transform: translateX(-50%);
-                width: 50%;
-                height: 2.5px;
-                border-radius: 10px;
-
-                background-color: #ffffff;
-                opacity: 0;
-                transition: opacity 0.3s ease;
-            }
-            
-            .nav-items:hover::after {
-                opacity: 1;
-            }
-        }
-    }
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 
 .main__div-content {
-    grid-area: 1 / 3 / 1 / 5;
-    
-    height: 534px;
-    background: rgb(255, 255, 255);
-    
+  background: rgb(255, 255, 255);
 
-    .main__div-contentCons {
-        width: 100%;
-        height: 454px;
-        padding: 5.5rem;
+  .main__div-contentCons {
+    width: 100%;
+    padding: 8rem 5rem;
 
-        .main__div-content-heading {
-            font-size: 3rem;
-            font-weight: 700;
-            color: black;
-        }
-    
-        .main__div-content-para {
-            font-size: 1rem;
-            margin-top: 1.5rem;
-            font-weight: 400;
-            line-height: 1.2rem;
-        }
-    
-        .shopNow__button {
-            font-size: .9rem;
-            margin-top: 1.5rem;
-            text-transform: uppercase;
-            letter-spacing: .5rem;
-            color: hsl(0, 0%, 0%);
-    
-            background: transparent;
-            border: none;
-        }
-
-        .animate {
-            animation: fadeItems 0.5s;
-        }
-
-        @keyframes fadeItems {
-            0% {
-                opacity: 0;
-                transform: translate(20px) scale(0.9);
-            }
-    
-            100% {
-                opacity: 1;
-                transform: translate(0px) scale(1);
-            }
-        }
+    .animate {
+      animation: fadeItems 0.5s;
     }
 
-    .arrowDiv {
-        width: 160px;
-        height: 80px;
-        display: flex;
-        flex-direction: row;
+    @keyframes fadeItems {
+      0% {
+        opacity: 0;
+        transform: translate(20px) scale(0.9);
+      }
 
-        background-color: black;
-
-        .firstArrow {
-            width: 80px;
-            height: 80px;
-            border: none;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-
-            background-color: black;
-
-            img {
-                height: 25px;
-            }
-        }
-
-        .firstArrow:hover {
-           background-color: hsl(0, 0%, 27%);
-        }
-
-        .secondArrow {
-            width: 80px;
-            height: 80px;
-            border: none;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-
-            background-color: black;
-
-            img {
-                height: 25px;
-            }
-        }
-
-        .secondArrow:hover {
-            background-color: hsl(0, 0%, 27%);
-        }
+      100% {
+        opacity: 1;
+        transform: translate(0px) scale(1);
+      }
     }
-}
-
-.mini__div-image1 {
-    grid-area: 2 / 1 / 2 / 2;
+  }
 }
 
 .mini__div-content {
-    grid-area: 2 / 2 / 2 / 4;
-    padding: 3rem;
+  padding: 3rem;
+  min-height: 300px;
 
-    .mini__div-content-heading {
-        font-size: 1.2rem;
-        font-weight: 800;
-        text-transform: uppercase;
-        letter-spacing: .3rem;
-        margin-bottom: 1.7rem;
+  .mini__div-content-heading {
+    font-size: 1.2rem;
+    font-weight: 800;
+    text-transform: uppercase;
+    letter-spacing: 0.3rem;
+    margin-bottom: 1.7rem;
 
-        color: black;
-    }
+    color: black;
+  }
 
-    .mini__div-content-para {
-        font-size: 16px;
-        color: hsl(0, 0%, 63%);
-        line-height: 1.2rem;
-
-    }
+  .mini__div-content-para {
+    font-size: 16px;
+    color: hsl(0, 0%, 63%);
+    line-height: 1.2rem;
+  }
 }
 
-.mini__div-image2 {
-    grid-area: 2 / 4 / 2 / 5;
+.bg-aboutDark {
+  background-image: url(../../assets/images/image-about-dark.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 300px;
+}
+
+.bg-aboutLight {
+  background-image: url(../../assets/images/image-about-light.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 300px;
+}
+
+.arrowDiv {
+  width: 160px;
+  height: 80px;
+  display: flex;
+  flex-direction: row;
+
+  background-color: black;
+
+  .firstArrow {
+    width: 80px;
+    height: 80px;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    background-color: black;
+
+    img {
+      height: 25px;
+    }
+  }
+
+  .firstArrow:hover {
+    background-color: hsl(0, 0%, 27%);
+  }
+
+  .secondArrow {
+    width: 80px;
+    height: 80px;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    background-color: black;
+
+    img {
+      height: 25px;
+    }
+  }
+
+  .secondArrow:hover {
+    background-color: hsl(0, 0%, 27%);
+  }
+}
+
+.navbar {
+  width: 100%;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  text-transform: lowercase;
+  gap: 2.2rem;
+
+  color: white;
+
+  padding-top: 50px;
+  padding-left: 60px;
+
+  .navbar-head {
+    font-size: 2.2rem;
+  }
+
+  .nav-items {
+    font-size: 1.2rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 1.6rem;
+
+    .nav-item {
+      display: inline-block;
+      position: relative;
+      cursor: pointer;
+    }
+
+    .nav-item::after {
+      content: "";
+      position: absolute;
+      bottom: -8px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 50%;
+      height: 2.5px;
+      border-radius: 10px;
+
+      background-color: #ffffff;
+      opacity: 0;
+      transition: opacity 0.3s ease;
+    }
+
+    .nav-item:hover::after {
+      opacity: 1;
+    }
+  }
 }
